--- a/build.xml
+++ b/build.xml
@@ -29,8 +29,8 @@
     </target>
 
     <target name="compile" depends="init">
-        <javac destdir="build/main" srcdir="src/main/java" includeantruntime="false"/>
-        <javac destdir="build/test" classpathref="test.classpath" srcdir="src/test/java" includeantruntime="false"/>
+        <javac destdir="build/main" srcdir="JavaLibLevel1/src/main/java" includeantruntime="false"/>
+        <javac destdir="build/test" classpathref="test.classpath" srcdir="JavaLibLevel1/src/test/java" includeantruntime="false"/>
     </target>
 
     <!-- https://junit.org/junit5/docs/snapshot/user-guide/#running-tests-build-ant -->
