--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
 
     <target name="compile" depends="init">
         <javac destdir="build/main" srcdir="JavaLibLevel1/src/main/java" includeantruntime="false"/>
-        <javac destdir="build/test" classpathref="test.classpath" srcdir="JavaLibLevel1/src/test/java" includeantruntime="false"/>
+        <javac destdir="build/test" classpathref="test.classpath" srcdir="JavaLibLevel1/src/test/java" includeantruntime="true"/>
     </target>
 
     <!-- https://junit.org/junit5/docs/snapshot/user-guide/#running-tests-build-ant -->
